--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 
     <main>
       <!-- main baner -->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="main">
+        <h1 class="main-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="order-btn">Order Service</button>
       </section>
       <!-- Description of benefits -->
 
