--- a/index.html
+++ b/index.html
@@ -67,21 +67,21 @@
         <ul>
           <li>
             <h3>Strategy</h3>
-            <p>
+            <p class="text-values">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
             <h3>Punctuality</h3>
-            <p>
+            <p class="text-values">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
             <h3>Diligence</h3>
-            <p>
+            <p class="text-values">
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
             </p>
@@ -139,6 +139,47 @@
             />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Our Portfolio</h2>
+        <ul>
+          <li>
+            <img src="./images/img-5.jpg" alt="banking"width: 360px; height:
+            300px; />
+            <h3>Banking App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img src="./images/img-6.jpg" alt="cashless"width: 360px; height:
+            300px; />
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./images/img-7.jpg" alt="meditation"width: 360px; height:
+            300px; />
+            <h3>Meditation App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img src="./images/img-8.jpg" alt="taxi"width: 360px; height: 300px;
+            />
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./images/img-9.jpg" alt="screen"width: 360px; height:
+            300px; />
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img src="./images/img-10.jpg" alt="online"width: 360px; height:
+            300px; />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
           </li>
         </ul>
       </section>
