--- a/index.html
+++ b/index.html
@@ -66,21 +66,21 @@
         <h2>Our Core Values</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
+            <h3 class="value-title">Strategy</h3>
             <p class="text-values">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
+            <h3 class="value-title">Punctuality</h3>
             <p class="text-values">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
+            <h3 class="value-title">Diligence</h3>
             <p class="text-values">
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
@@ -88,8 +88,8 @@
           </li>
 
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="value-title">Technologies</h3>
+            <p class="text-values">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
