--- a/index.html
+++ b/index.html
@@ -62,34 +62,34 @@
       </section>
       <!-- Description of benefits -->
 
-      <section>
+      <section class="Values">
         <h2>Our Core Values</h2>
         <ul>
           <li>
-            <h3 class="value-title">Strategy</h3>
-            <p class="text-values">
+            <h3>Strategy</h3>
+            <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3 class="value-title">Punctuality</h3>
-            <p class="text-values">
+            <h3>Punctuality</h3>
+            <p">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3 class="value-title">Diligence</h3>
-            <p class="text-values">
+            <h3>Diligence</h3>
+            <p>
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
             </p>
           </li>
 
           <li>
-            <h3 class="value-title">Technologies</h3>
-            <p class="text-values">
+            <h3>Technologies</h3>
+            <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -98,7 +98,7 @@
       </section>
       <!-- Team -->
       <section>
-        <h2>Our Team</h2>
+        <h2 class="">Our Team</h2>
         <ul>
           <li>
             <img
