--- a/index.html
+++ b/index.html
@@ -63,33 +63,33 @@
       <!-- Description of benefits -->
 
       <section class="Values">
-        <h2>Our Core Values</h2>
+        <h2 class="secondary-title">Our Core Values</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="value-title">Strategy</h3>
+            <p class="text-content">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p">
+            <h3 class="value-title">Punctuality</h3>
+            <p class="text-content">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="value-title">Diligence</h3>
+            <p class="text-content">
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
             </p>
           </li>
 
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="value-title">Technologies</h3>
+            <p class="text-content">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -97,8 +97,8 @@
         </ul>
       </section>
       <!-- Team -->
-      <section>
-        <h2 class="">Our Team</h2>
+      <section class="team">
+        <h2 class="secondary-title">Our Team</h2>
         <ul>
           <li>
             <img
@@ -107,8 +107,8 @@
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="subtitles-team"">Mark Guerrero</h3>
+            <p class="text-team">Product Designer</p>
           </li>
           <li>
             <img
@@ -117,8 +117,8 @@
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="subtitles-team">Tom Ford</h3>
+            <p class="text-team">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -127,8 +127,8 @@
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="subtitles-team"">Camila Garcia</h3>
+            <p class="text-team">Marketing</p>
           </li>
           <li>
             <img
@@ -137,49 +137,49 @@
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="subtitles-team">Daniel Wilson</h3>
+            <p class="text-team">UI Designer</p>
           </li>
         </ul>
       </section>
       <section>
-        <h2>Our Portfolio</h2>
+        <h2 class="secondary title">Our Portfolio</h2>
         <ul>
           <li>
             <img src="./images/img-5.jpg" alt="banking"width: 360px; height:
             300px; />
-            <h3>Banking App</h3>
-            <p>App</p>
+            <h3 class="subtitles">Banking App</h3>
+            <p class="text-content">App</p>
           </li>
           <li>
             <img src="./images/img-6.jpg" alt="cashless"width: 360px; height:
             300px; />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="subtitles">Cashless Payment</h3>
+            <p class="text-content">Marketing</p>
           </li>
           <li>
             <img src="./images/img-7.jpg" alt="meditation"width: 360px; height:
             300px; />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="subtitles">Meditation App</h3>
+            <p class="text-content">App</p>
           </li>
           <li>
             <img src="./images/img-8.jpg" alt="taxi"width: 360px; height: 300px;
             />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="subtitles">Taxi Service</h3>
+            <p class="text-content">Marketing</p>
           </li>
           <li>
             <img src="./images/img-9.jpg" alt="screen"width: 360px; height:
             300px; />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="subtitles">Screen Illustrations</h3>
+            <p class="text-content">Design</p>
           </li>
           <li>
             <img src="./images/img-10.jpg" alt="online"width: 360px; height:
             300px; />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="subtitles">Online Courses</h3>
+            <p class="text-content">Marketing</p>
           </li>
         </ul>
       </section>
