--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <!-- Description of benefits -->
 
       <section class="Values">
-        <h2 class="secondary-title">Our Core Values</h2>
+        <h2 class="">Our Core Values</h2>
         <ul>
           <li>
             <h3 class="value-title">Strategy</h3>
