--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         </ul>
       </section>
       <section>
-        <h2 class="secondary title">Our Portfolio</h2>
+        <h2 class="secondary-title">Our Portfolio</h2>
         <ul>
           <li>
             <img src="./images/img-5.jpg" alt="banking"width="360"
