--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
       <section class="Values">
         <h2 class="">Our Core Values</h2>
         <ul>
-          <li>
+          <li class="container-values">
             <h3 class="value-title">Strategy</h3>
             <p class="text-content">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
-          </li>
+          </li class="container-values">
           <li>
             <h3 class="value-title">Punctuality</h3>
             <p class="text-content">
@@ -79,7 +79,7 @@
               within the shortest possible time.
             </p>
           </li>
-          <li>
+          <li class="container-values">
             <h3 class="value-title">Diligence</h3>
             <p class="text-content">
               Research and confirm brands with the strongest digital growth
