--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
             />
             <h3 class="subtitles-team"">Mark Guerrero</h3>
             <p class="text-team">Product Designer</p>
-          </li class="container-values">
-          <li>
+          </li>
+          <li class="container-values">
             <img
               src="./images/img-2.jpg"
               alt="Tom Ford"
