--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
               width="264"
               height="260"
             />
-            <h3 class="subtitles-team"">Mark Guerrero</h3>
+            <h3 class="subtitles-team">Mark Guerrero</h3>
             <p class="text-team">Product Designer</p>
           </li>
           <li class="container-values">
@@ -127,7 +127,7 @@
               width="264"
               height="260"
             />
-            <h3 class="subtitles-team"">Camila Garcia</h3>
+            <h3 class="subtitles-team">camila carcia</h3>
             <p class="text-team">Marketing</p>
           </li>
           <li class="container-values">
@@ -146,40 +146,57 @@
         <h2 class="secondary-title">Our Portfolio</h2>
         <ul>
           <li>
-            <img src="./images/img-5.jpg" alt="banking"width="360"
-              height="300" />
+            <img
+              src="./images/img-5.jpg"
+              alt="banking"
+              width="360"
+              height="300"
+            />
             <h3 class="subtitles">Banking App</h3>
             <p class="text-content">App</p>
           </li>
           <li>
-            <img src="./images/img-6.jpg" alt="cashless"
-            width="360"
-            height="300" />
+            <img
+              src="./images/img-6.jpg"
+              alt="cashless"
+              width="360"
+              height="300"
+            />
             <h3 class="subtitles">Cashless Payment</h3>
             <p class="text-content">Marketing</p>
           </li>
           <li>
-            <img src="./images/img-7.jpg" alt="meditation"width="360"
-              height="300" />
+            <img
+              src="./images/img-7.jpg"
+              alt="meditation"
+              width="360"
+              height="300"
+            />
             <h3 class="subtitles">Meditation App</h3>
             <p class="text-content">App</p>
           </li>
           <li>
-            <img src="./images/img-8.jpg" alt="taxi"width="360"
-              height="300"
-            />
+            <img src="./images/img-8.jpg" alt="taxi" width="360" height="300" />
             <h3 class="subtitles">Taxi Service</h3>
             <p class="text-content">Marketing</p>
           </li>
           <li>
-            <img src="./images/img-9.jpg" alt="screen"width="360"
-              height="300" />
+            <img
+              src="./images/img-9.jpg"
+              alt="screen"
+              width="360"
+              height="300"
+            />
             <h3 class="subtitles">Screen Illustrations</h3>
             <p class="text-content">Design</p>
           </li>
           <li>
-            <img src="./images/img-10.jpg" alt="online"width="360"
-              height="300"/>
+            <img
+              src="./images/img-10.jpg"
+              alt="online"
+              width="360"
+              height="300"
+            />
             <h3 class="subtitles">Online Courses</h3>
             <p class="text-content">Marketing</p>
           </li>
