--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         >Web<span class="logo-part">Studio</span></a
       >
 
-      <p>
+      <p class="text-footer">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
